# simple-exif-tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exif-editor.sln  removeEXIF.sln
Release/: remove-exif.lib
exif-editor/: exif.h  exif_editor.c  exif_editor.h  linked_list.h
exif_editor/: exif_delete.h  exif_reader.c  exif_reader.h  exif_tools.h
exif_editor/src/: linked_list.c  linked_list.h  raw_exif.c  raw_exif.h
exif_tools/: exif_delete.c  exif_reader.c
exif_tools/src/: raw_exif.c
lib/: remove-exif.lib
removeEXIF/: exif.h  image-exif.c  image-exif.h  removeEXIF.vcxproj  removeEXIF.vcxproj.filters
tiny-app/: main.c  tiny-app.vcxproj
